<resources>
    <string name="app_name">LLPPDRUMS</string>
    <string name="stringDivider"> -> </string>
    <string name="savedProjectsFolder">saves</string>
    <string name="savedRndTemplatesFolder">rndTemplates</string>
    <string name="lastDataFileName">prms</string>
    <string name="templateExtension">.KIFF</string>
    <string name="noSavedFilesMessage">NO FILES SAVED</string>
    <string name="machineTab">PATTERNS</string>
    <string name="controllerTab">CONTROLLER</string>
    <string name="inactiveTabAlpha">0.5</string>
    <string name="playBtn">PLAY</string>
    <string name="pauseBtn">PAUSE</string>
    <string name="stopBtn">STOP</string>
    <string name="controllerName">CONTROLLER</string>
    <string name="controllerTabName">CONTROLLER</string>
    <string name="controllerSeqBtnNameShort">PTRN BTN MAN</string>
    <string name="controllerSeqBtnName">PATTERN BUTTON MANAGER</string>
    <string name="controllerFunBtnNameShort">FUNC BTN MAN</string>
    <string name="controllerFunBtnName">FUNCTION BUTTON MANAGER</string>
    <string name="momentaryCheck">MOMENTARY</string>
    <string name="machineName">PATTERNS</string>
    <string name="machineTabName">PATTERNS</string>
    <string name="trackRandomOptionsBtn">EDIT</string>
    <string name="oscAtkTime">ATK</string>
    <string name="oscReleaseTime">RELEASE</string>
    <string name="synthSustainLevel">SUSTAIN</string>
    <string name="synthReleaseTime">RELEASE</string>
    <string name="synthAtkDuration">ATK DURATION</string>
    <string name="synthDecayDuration">DECAY DURATION</string>
    <string name="synthSustainDuration">SUSTAIN DURATION</string>
    <string name="synthReleaseDuration">RELEASE DURATION</string>
    <string name="oscWave">WAVE</string>
    <string name="oscVolume">VOL</string>
    <string name="oscPitch">PITCH</string>
    <string name="synthDuration">DURATION</string>
    <string name="sampleVolume">VOL</string>
    <string-array name="oscWaves">
        <item>SINE</item>
        <item>TRIANGLE</item>
        <item>SAWTOOTH</item>
        <item>SQUARE</item>
        <item>NOISE</item>
        
        
        
    </string-array>
    <string name="seqName">PATTERNS</string>
    <string name="trackMenuLabel">TRACK MENU</string>
    <string name="soundManagerLabel">SOUND MANAGER:\u0020</string>
    <string name="stepManagerLabel">STEP MANAGER:\u0020</string>
    <string name="rndTrackLabel">RND TRACK MANAGER:\u0020</string>
    <string name="fxManagerLabel">FX MANAGER:\u0020</string>
    <string name="seqModBaseModeName">BASE</string>
    <string name="seqModBaseModeTabName">BASE</string>
    <string name="seqModRandomModeName">AUTORANDOMIZATION</string>
    <string name="seqModRandomModeTabName">AUTO</string>
    <string name="onoffName">ON</string>
    <string name="onoffTabLabel">ON</string>
    <string name="volumeName">VOLUME</string>
    <string name="volumeTabLabel">VOL</string>
    <string name="pitchName">PITCH</string>
    <string name="pitchTabLabel">PITCH</string>
    <string name="panName">PAN</string>
    <string name="panTabLabel">PAN</string>
    <string name="seqModBase">BASE</string>
    <string name="seqModRandom">ATRND</string>
    <string name="autoRndOn">ON</string>
    <string name="autoRndOnFull">ON</string>
    <string name="autoRndMin">MIN</string>
    <string name="autoRndMinFull">MIN VALUE</string>
    <string name="autoRndMax">MAX</string>
    <string name="autoRndMaxFull">MAX VALUE</string>
    <string name="autoRndPerc">%</string>
    <string name="autoRndPercFull">% OF RND</string>
    <string name="autoRndReturn">RTRN</string>
    <string name="autoRndReturnFull">RETURN AFTER RND</string>
    <string name="seqRandomOptionsBaseName">RANDM</string>
    <string name="seqRandomOptionsAdvancedName">ADVANCED</string>
    <string name="fxOn">ON</string>
    <string name="fxReverbName">REVERB</string>
    <string name="fxRevLoFiSize">SIZE</string>
    <string name="fxRevLoFiDamp">DAMP</string>
    <string name="fxRevLoFiMix">MIX</string>
    <string name="fxRevLoFiOut">OUT</string>
    <string name="fxDelayName">DELAY</string>
    <string name="fxDelayTime">TIME</string>
    <string name="fxDelayFeedback">FEEDBACK</string>
    <string name="fxDelayMix">MIX</string>
    <string name="fxFlangerName">FLANGER</string>
    <string name="fxFlangerRate">RATE</string>
    <string name="fxFlangerWidth">WIDTH</string>
    <string name="fxFlangerFeedback">FEEDBACK</string>
    <string name="fxFlangerDelay">DELAY</string>
    <string name="fxFlangerMix">MIX</string>
    <string name="fxRevHiFiName">REVERB HIFI</string>
    <string name="fxRevHiFiRoom">ROOM</string>
    <string name="fxRevHiFiDamp">DAMP</string>
    <string name="fxRevHiFiWet">WET</string>
    <string name="fxRevHiFiDry">DRY</string>
    <string name="fxRevHiFiWidth">WIDTH</string>
    <string name="fxBitCrusherName">BITCRUSHER</string>
    <string name="fxBitCrusherAmout">AMOUNT</string>
    <string name="fxBitCrusherIn">IN</string>
    <string name="fxBitCrusherOut">OUT</string>
    <string name="fxDecimatorName">DECIMATOR</string>
    <string name="fxDeciamtorBits">BITS</string>
    <string name="fxDeciamtorRate">RATE</string>
    <string name="fxTremoloName">TREMOLO</string>
    <string name="fxTremoloLeftAttack">LEFT ATTACK</string>
    <string name="fxTremoloLeftDecay">LEFT DECAY</string>
    <string name="fxTremoloRightAttack">RIGHT ATTACK</string>
    <string name="fxTremoloRightDecay">RIGHT DECAY</string>
    <string name="fxWSName">WAVE SHAPER</string>
    <string name="fxWSAmount">AMOUNT</string>
    <string name="fxWSLevel">LEVEL</string>
    <string name="fxFFName">FORMANT FILTER</string>
    <string name="fxFFVowel">VOWEL</string>
    <string name="fxLPName">LP FILTER</string>
    <string name="fxHPName">HP FILTER</string>
    <string name="fxHPLPHP">HP FREQ</string>
    <string name="fxHPLPLP">LP FREQ</string>
    <string name="fxLimiterName">LIMITER</string>
    <string name="fxLimiterAttack">ATTACK</string>
    <string name="fxLimiterRelease">RELEASE</string>
    <string name="fxLimiterThreshold">THRESHOLD</string>
    <string name="fxPresetBaseName">BASS</string>
    <string name="fxPresetHHName">HH</string>
    <string name="fxPresetSnareName">SNARE</string>
    <string name="randomizeSeqLabelShort">RND PTRN MANAGER</string>
    <string name="randomizeSeqLabel">RANDOMIZE PATTERN MANAGER</string>
    <string name="randomizeBtn">RNDMIZE</string>
    <string name="randomizerModifiedName">*</string>
    <string name="randomizerClassicRockName">CLASSIC ROCK</string>
    <string name="randomizerRockPlusName">ROCK+</string>
    <string name="randomizerDesertName">SAHARA</string>
    <string name="randomizerHiBeatName">HIBEAT</string>
    <string name="randomizerJazzName">JAZZ</string>
    <string name="randomizerModernRockName">MODERN ROCK</string>
    <string name="randomizerWaltzName">WALTZ</string>
    <string name="randomizerHotNightsName">HOT NIGHTS</string>
    <string name="randomizerRandomName">RANDOM</string>
    <string name="randomizerFreeName">FREE</string>
    <string name="randomizerDiscoName">DISCO</string>
    <string name="randomizerPopName">POP</string>
    <string name="trackPresetRandomName">RANDOM</string>
    <string name="trackPresetBassBasicName">BASS BASIC</string>
    <string name="trackPresetHHBasicName">HH BASIC</string>
    <string name="trackPresetHHOffbeatName">HH OFFBEAT</string>
    <string name="trackPresetSnareBasicName">SNARE BASIC</string>
    <string name="trackPresetHotTomsName">HOT TOMS</string>
    <string name="seqManagerLabel">PATTERN MANAGER</string>
    <string name="seqManagerProgressLabel">PROGRESSION</string>
    <string name="seqManagerRandProgressLabel">RANDOMIZE</string>
    <string name="seqManagerResetLabel">RESET PROGRESS</string>
    <string name="seqManagerQueueLabel">QUEUE</string>
    <string name="seqManagerEditRndLabelShort">PTRN MAN RND OPTNS</string>
    <string name="seqManagerEditRndLabel">PATTERN MANAGER RANDOMIZATION OPTIONS</string>
    <string name="projectOptionsLabel">PROJECT OPTIONS</string>
    <string name="btWarningLabel">BLUETOOTH WARNING</string>
    <string name="btWarningTxt">HAVING A BLUETOOTH AUDIO DEVICE CONNECTED WILL COMPLETELY RUIN PERFORMANCE. USE A CABLE INSTEAD.</string>
    <string name="oscLabel">OSCILLATOR</string>
    <string name="sampleLabel">SAMPLE</string>
    <string name="infoWip">!!WORK IN PROGRESS!!</string>
    <string name="mainIntroTxt1">The two main modules are</string>
    <string name="mainIntroTxt2">PATTERNS is for setting up the patterns and CONTROLLER for controlling them in realtime.</string>
    <string name="mainIntroTxt3">\n\nYou have any number of independent patterns (represented by colored tabs to the left) that plays in the order set in the</string>
    <string name="mainIntroTxt4">. Most thing can be randomized both manually and automatically (ex. randomize volume on a given step in a given track every measure).</string>
    <string name="mainTransportTxt">Basic controls.</string>
    <string name="mainFilesTxt">LOAD/SAVE/CLEAR the project. CLEAR is destructive.</string>
    <string name="mainSeqManTxt1">Shows the order of progression (if PROGRESSION is on). Clicking a cell will change to that pattern immediately or at the next measure depending on QUEUE. EDIT opens</string>
    <string name="mainSeqManTxt2">\n\nRed triangle is the pattern currently playing. Grey is queued for change at the next measure.</string>
    <string name="mainSeqManTxt3">\n\nThe green bar indicates what step the sequencer is on no matter what pattern is playing. </string>
    <string name="projOptnsIntroTxt">You access project options by clicking this button in the top row.</string>
    <string name="projOptnsDriverTxt">Choose either OpenSL or AAudio as the driver. Try what works best with your hardware.</string>
    <string name="controllerIntroTxt">The idea of CONTROLLER is to do things to patterns and ex. effects in a live setting. The big buttons lets you take off your socks and push them with your toes if you want to.</string>
    <string name="controllerCounterTxt">The square shows selected pattern (the one PAT- and FUN-btns will operate on). Red triangle is the pattern currently playing. Grey is queued for change at the next measure.</string>
    <string name="controllerArrowsTxt">Select which pattern PAT- and FUN-btns operate on.</string>
    <string name="controllerSeqTxt1">Control pattern-related actions, ex. playing another pattern while the button is pressed etc. EDIT opens</string>
    <string name="controllerSeqTxt2">. Holding or clicking PAT will do whatever\'s set in options.</string>
    <string name="controllerFunTxt1">EDIT opens</string>
    <string name="controllerFunTxt2">. Holding or clicking FUN will do whatever\'s set in options.</string>
    <string name="seqManIntroTxt">You access the pattern manager by clicking the edit button.</string>
    <string name="seqManOrderTxt">Change the order of progression by clicking a box and selecting a new. The slider enables/disables boxes.</string>
    <string name="seqManBoxesTxt1">If PROGRESSION is turned off the same pattern will always play unless changed manually. If it\'s turned on it will either progress in the order above or change to a random pattern, depending on RANDOMIZE. EDIT opens</string>
    <string name="seqManBoxesTxt2">\n\nIf QUEUE is on manual pattern changes will occur at the start of the next measure. If off it\'s instant.</string>
    <string name="seqManBoxesTxt3">\n\nRESET PROGRESSION resets progression when the sequencer is stopped.</string>
    <string name="seqIntroTxt1">You can create any number of patterns that are completely independent of each other (steps, tempo etc). You decide if you want one to play over and over or let them progress and in what order in</string>
    <string name="seqIntroTxt2">. You can also change what pattern is playing manually either in</string>
</resources>