<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- LEFT ATTACK -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/marginSmall">
        <SeekBar
            android:layout_width="@dimen/defaultSeekBarWidth"
            android:layout_height="@dimen/defaultSeekBarHeight"
            android:id="@+id/leftAttackSlider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxTremoloLeftAttack"/>
    </FrameLayout>

    <!-- LEFT DECAY -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/marginSmall">
        <SeekBar
            android:layout_width="@dimen/defaultSeekBarWidth"
            android:layout_height="@dimen/defaultSeekBarHeight"
            android:id="@+id/leftDecaySlider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxTremoloLeftDecay"/>
    </FrameLayout>

    <!-- RIGHT ATTACK -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/marginSmall">
        <SeekBar
            android:layout_width="@dimen/defaultSeekBarWidth"
            android:layout_height="@dimen/defaultSeekBarHeight"
            android:id="@+id/rightAttackSlider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxTremoloRightAttack"/>
    </FrameLayout>

    <!-- LEFT DECAY -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/marginSmall">
        <SeekBar
            android:layout_width="@dimen/defaultSeekBarWidth"
            android:layout_height="@dimen/defaultSeekBarHeight"
            android:id="@+id/rightDecaySlider"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fxTremoloRightDecay"/>
    </FrameLayout>
</LinearLayout>